# atoto_firmware_downloader

./: .gitignore  README.md  REDDIT_DRAFT.md  analyze_zip.py  atoto.py  atoto_firmware_downloader.py  extract_bin.py  probe_fota.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml
[Added-Files]/: find_codes.py  grep_3368.py  ota_extract.py  scan_codes.py  scan_secret_codes.py  sdat2img-2.py  sdat2img.py
atoto_fw/: __init__.py  cli.py  core.py  tui.py  ui.py
atoto_fw/addons/: __init__.py  extract_img.py  extract_ota.py  extract_zip.py  find_pwd.py  firmware_workflow.py  inspect_fw.py  repack_ota.py
atoto_fw/core/: __init__.py  assemble.py  config.py  download.py  grouping.py  http.py  init.py  models.py  utils.py  variants.py
atoto_fw/core/discovery/: __init__.py  api.py  hcn_scraper.py  json_probe.py  mirrors.py  normalize.py  redstone.py
